<resources>
    <string name="app_name">Food Roulette</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Remember">Remember me</string>
    <string name="Login">Login</string>
    <string name="title_activity_options">Options</string>
    <string name="Email">Email</string>
    <string name="First">First Name</string>
    <string name="Last">Last Name</string>
    <string name="Birthday">Birth Date</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Add">Add restaurant to list</string>
    <string name="Type">Type restaurant</string>
    <string name="Title">Restaurants At Random</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_set_filters">Set Filters</string>
    <string name="current">Current Location</string>
    <string name="Five_miles">5mi.</string>
    <string name="Ten_miles">10mi.</string>
    <string name="Fifteen_miles">15mi.</string>
    <string name="Twenty_miles">20mi.</string>
    <string name="Distance">Distance:</string>
    <string name="Star_rating">Star rating:</string>
    <string name="Starting_point">Choose starting point for search:</string>
    <string name="Choose_from_map">or</string>
    <string name="Choose_by_postal">Choose by postal code:</string>
    <string name="Zip_code">Postal code</string>
    <string name="Search">Choose from Map</string>
    <string name="Carry">Carry_out</string>
    <string name="Dine">Dine-in</string>
    <string name="title_activity_login">Login</string>
    <string name="create">Create/Edit your faves</string>
    <string name="choose_randomly">Choose Randomly </string>
    <string name="home">OPENING </string>
    <string name="google_map_api_key">AIzaSyCF1EGesugzJyeB8ySuTMRTSrJZDglzYHw</string>
    <string name="logo">OPENING </string>
    <string name="title_activity_set__restaurant__filters">Set_Restaurant_Filters</string>
    <string name="filters">Set Your Location Filters or Create a List</string>
    <string name="random">Random Generator</string>
    <string name="title_activity_wheel">Wheel</string>
    <string name="type">Type:</string>
    <string name="search">Search By List</string>
    <string name="title_activity_get_nearby_places">GetNearbyPlaces</string>


</resources>
