<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CreateList">


    <CheckBox
        android:id="@+id/distance15"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/distance10"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:text="@string/Fifteen_miles"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/distance10"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_alignLeft="@+id/ratingBar"
        android:layout_alignStart="@+id/ratingBar"
        android:layout_alignTop="@+id/distance5"
        android:text="@string/Ten_miles"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="217dp"
        android:isIndicator="false"
        android:numStars="5" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="173dp"
        android:text="@string/Star_rating"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:text="@string/Distance"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/distance5"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="84dp"
        android:text="@string/Five_miles"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/Carry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/distance15"
        android:layout_toLeftOf="@+id/distance15"
        android:text="@string/Carry"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <CheckBox
        android:id="@+id/distance20"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_alignTop="@+id/distance5"
        android:layout_toEndOf="@+id/ratingBar"
        android:layout_toRightOf="@+id/ratingBar"
        android:text="@string/Twenty_miles"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/Dine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:text="@string/Dine"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="238dp"
        android:text="@string/Type" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="172dp"
        android:text="CheckBox" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="-172dp"
        android:text="CheckBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBox2"
        android:text="CheckBox" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBox3"
        android:text="CheckBox" />

</RelativeLayout>

