<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="100dp" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40dp"


            android:text="RandomEats"

            android:textColor="@color/headerColor" />

    </RelativeLayout>

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:text="@string/Starting_point"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="227dp"
        android:text="@string/Choose_from_map"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textSize="24sp" />


    <Button
        android:id="@+id/searchByFilters"
        android:layout_width="116dp"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="214dp"
        android:background="@drawable/button_background"
        android:text="@android:string/search_go"
        android:textSize="16sp" />

    <Button
        android:id="@+id/map1"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="281dp"
        android:background="@drawable/button_background"
        android:text="@string/Search"
        android:textSize="18sp"
        android:tooltipText="Choose a starting location from the map."/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:text="Button" />

    <Button
        android:id="@+id/current"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="158dp"
        android:background="@drawable/button_background"
        android:text="@string/current"
        android:textSize="18sp"
        android:tooltipText="Make your current location your starting point."/>


</RelativeLayout>