<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Options">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="RandomEats"


                android:textColor="@android:color/background_dark"

                android:textSize="40dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/Create"
                android:layout_width="250dp"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"

                android:background="@drawable/button_background"
                android:text="@string/create"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:tooltipText="Create or edit a list of your favorite restaurants." />

            <Button
                android:id="@+id/random"
                android:layout_width="250dp"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_background"
                android:text="@string/random"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="14sp"
                android:tooltipText="Have restaurants randomly generated for you." />



            <Button
                android:id="@+id/Search"
                android:layout_width="250dp"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_background"
                android:text="@string/search"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:tooltipText="Search for restaurants using your created list" />

        </LinearLayout>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>